--- a/src/gui/LearningUtilityCreationPanel.fxml
+++ b/src/gui/LearningUtilityCreationPanel.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -11,7 +15,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<fx:root prefHeight="486.0" prefWidth="823.0" type="GridPane" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="486.0" prefWidth="823.0" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="160.0" minWidth="160.0" prefWidth="160.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="209.0" />
@@ -23,7 +27,8 @@
       <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="162.0" minHeight="10.0" prefHeight="162.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="60.0" minHeight="40.0" prefHeight="60.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
@@ -44,9 +49,9 @@
             <Insets right="15.0" top="5.0" />
          </GridPane.margin>
       </Label>
-      <Label text="Prijs" GridPane.rowIndex="4">
+      <Label text="Prijs" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
-            <Insets right="15.0" />
+            <Insets left="60.0" right="15.0" />
          </GridPane.margin>
       </Label>
       <Label text="Uitleenbaar" GridPane.rowIndex="3">
@@ -54,7 +59,7 @@
             <Insets right="15.0" />
          </GridPane.margin>
       </Label>
-      <Label text="Artikelnummer" GridPane.rowIndex="5">
+      <Label text="Artikelnummer" GridPane.rowIndex="6">
          <GridPane.margin>
             <Insets right="15.0" />
          </GridPane.margin>
@@ -64,65 +69,50 @@
             <Insets right="15.0" />
          </GridPane.margin>
       </Label>
-      <Label text="Doelgroep(en)" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <Label text="Doelgroep(en)" GridPane.rowIndex="4" GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets right="15.0" />
          </GridPane.margin>
       </Label>
-      <Label text="Leergebied(en)" GridPane.columnIndex="2" GridPane.rowIndex="4">
+      <Label text="Leergebied(en)" GridPane.columnIndex="2" GridPane.rowIndex="4" GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets right="15.0" />
          </GridPane.margin>
       </Label>
       <Label text="Locatie" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="TOP">
          <GridPane.margin>
-            <Insets right="15.0" top="5.0" />
+            <Insets right="15.0" top="10.0" />
          </GridPane.margin>
       </Label>
-      <ComboBox fx:id="cmbLocation" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.valignment="TOP">
-         <GridPane.margin>
-            <Insets right="15.0" top="5.0" />
-         </GridPane.margin>
-      </ComboBox>
-      <ComboBox fx:id="cmbTargetGroups" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets right="15.0" />
-         </GridPane.margin>
-      </ComboBox>
-      <ComboBox fx:id="cmbFieldsOfStudy" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
-         <GridPane.margin>
-            <Insets right="15.0" />
-         </GridPane.margin>
-      </ComboBox>
       <CheckBox fx:id="chkLoanable" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <TextField fx:id="txtPrice" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <TextField fx:id="txtPrice" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
-            <Insets right="15.0" />
+            <Insets left="100.0" right="15.0" />
          </GridPane.margin>
       </TextField>
-      <TextField fx:id="txtArticleNumber" GridPane.columnIndex="1" GridPane.rowIndex="5">
+      <TextField fx:id="txtArticleNumber" GridPane.columnIndex="1" GridPane.rowIndex="6">
          <GridPane.margin>
-            <Insets right="15.0" />
+            <Insets right="150.0" />
          </GridPane.margin>
       </TextField>
-      <Label text="Aantal in stock" GridPane.rowIndex="6">
+      <Label text="Aantal in stock" GridPane.rowIndex="7">
          <GridPane.margin>
             <Insets right="15.0" />
          </GridPane.margin>
       </Label>
-      <Label text="Aantal onbeschikbaar" GridPane.columnIndex="2" GridPane.rowIndex="6">
+      <Label text="Aantal onbeschikbaar" GridPane.columnIndex="2" GridPane.rowIndex="7">
          <GridPane.margin>
             <Insets right="15.0" />
          </GridPane.margin>
       </Label>
-      <TextField fx:id="txtAmountInStock" GridPane.columnIndex="1" GridPane.rowIndex="6">
+      <TextField fx:id="txtAmountInStock" GridPane.columnIndex="1" GridPane.rowIndex="7">
          <GridPane.margin>
-            <Insets right="15.0" />
+            <Insets right="150.0" />
          </GridPane.margin>
       </TextField>
-      <TextField fx:id="txtAmountUnavailable" GridPane.columnIndex="3" GridPane.rowIndex="6">
+      <TextField fx:id="txtAmountUnavailable" GridPane.columnIndex="3" GridPane.rowIndex="7">
          <GridPane.margin>
-            <Insets right="15.0" />
+            <Insets right="150.0" />
          </GridPane.margin>
       </TextField>
       <TextArea fx:id="txtDescription" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -135,11 +125,42 @@
             <Insets right="15.0" />
          </GridPane.margin>
       </TextField>
-      <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#add" text="Toevoegen" GridPane.rowIndex="7">
+      <Button fx:id="btnAdd" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#add" text="Toevoegen" GridPane.columnIndex="3" GridPane.rowIndex="8">
+         <GridPane.margin>
+            <Insets left="160.0" right="15.0" />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="btnReset" mnemonicParsing="false" onAction="#reset" text="Reset" GridPane.columnIndex="3" GridPane.rowIndex="8">
+         <GridPane.margin>
+            <Insets left="100.0" right="15.0" />
+         </GridPane.margin></Button>
+      <ListView fx:id="lstTargetGroups" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.rowSpan="2">
          <GridPane.margin>
             <Insets right="15.0" />
          </GridPane.margin>
-      </Button>
-      <Button fx:id="btnReset" mnemonicParsing="false" onAction="#reset" text="Reset" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      </ListView>
+      <ListView fx:id="lstFieldsOfStudy" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2">
+         <GridPane.margin>
+            <Insets right="15.0" />
+         </GridPane.margin>
+      </ListView>
+      <Label text="Bedrijf" GridPane.columnIndex="2" GridPane.rowIndex="3">
+         <GridPane.margin>
+            <Insets right="15.0" />
+         </GridPane.margin>
+      </Label>
+      <ComboBox fx:id="cboCompanies" maxWidth="250.0" prefWidth="250.0" promptText="Selecteer" GridPane.columnIndex="3" GridPane.rowIndex="3">
+         <opaqueInsets>
+            <Insets right="15.0" />
+         </opaqueInsets>
+      </ComboBox>
+      <ComboBox fx:id="cboLocations" prefWidth="250.0" promptText="Selecteer" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets top="5.0" />
+         </GridPane.margin>
+         <padding>
+            <Insets right="15.0" />
+         </padding>
+      </ComboBox>
    </children>
 </fx:root>
