--- a/src/gui/LearningUtilityImportPanel.fxml
+++ b/src/gui/LearningUtilityImportPanel.fxml
@@ -22,6 +22,11 @@
             <Insets left="15.0" />
          </GridPane.margin>
       </Label>
+      <Button fx:id="btnImport" mnemonicParsing="false" onAction="#importAndLoadDatabase" text="Importeren" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets right="15.0" />
+         </GridPane.margin>
+      </Button>
    </children>
    <columnConstraints>
       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
@@ -29,6 +34,6 @@
    </columnConstraints>
    <rowConstraints>
       <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="20.0" minHeight="20.0" prefHeight="20.0" valignment="BOTTOM" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" valignment="BOTTOM" vgrow="SOMETIMES" />
    </rowConstraints>
 </fx:root>
