--- a/src/gui/LearningUtilityCreationPanel.fxml
+++ b/src/gui/LearningUtilityCreationPanel.fxml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<fx:root prefHeight="486.0" prefWidth="823.0" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="486.0" prefWidth="823.0" type="GridPane" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="160.0" minWidth="160.0" prefWidth="160.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="209.0" />
       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="160.0" minWidth="160.0" prefWidth="160.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="239.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="250.0" prefWidth="250.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
       <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="162.0" minHeight="10.0" prefHeight="162.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="60.0" minHeight="40.0" prefHeight="60.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="81.0" minHeight="40.0" prefHeight="62.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="11.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
@@ -71,7 +69,7 @@
       </Label>
       <Label text="Doelgroep(en)" GridPane.rowIndex="4" GridPane.valignment="TOP">
          <GridPane.margin>
-            <Insets right="15.0" />
+            <Insets bottom="15.0" right="15.0" />
          </GridPane.margin>
       </Label>
       <Label text="Leergebied(en)" GridPane.columnIndex="2" GridPane.rowIndex="4" GridPane.valignment="TOP">
@@ -122,17 +120,17 @@
       </TextArea>
       <TextField fx:id="txtImage" GridPane.columnIndex="3" GridPane.rowIndex="1">
          <GridPane.margin>
-            <Insets right="15.0" />
+            <Insets right="5.0" />
          </GridPane.margin>
       </TextField>
-      <Button fx:id="btnAdd" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#add" text="Toevoegen" GridPane.columnIndex="3" GridPane.rowIndex="8">
+      <Button fx:id="btnAdd" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#add" text="Toevoegen" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
          <GridPane.margin>
-            <Insets left="160.0" right="15.0" />
+            <Insets right="15.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="btnReset" mnemonicParsing="false" onAction="#reset" text="Reset" GridPane.columnIndex="3" GridPane.rowIndex="8">
+      <Button fx:id="btnReset" mnemonicParsing="false" onAction="#reset" text="Reset" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
          <GridPane.margin>
-            <Insets left="100.0" right="15.0" />
+            <Insets right="120.0" />
          </GridPane.margin></Button>
       <ListView fx:id="lstTargetGroups" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.rowSpan="2">
          <GridPane.margin>
@@ -141,7 +139,7 @@
       </ListView>
       <ListView fx:id="lstFieldsOfStudy" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2">
          <GridPane.margin>
-            <Insets right="15.0" />
+            <Insets right="5.0" />
          </GridPane.margin>
       </ListView>
       <Label text="Bedrijf" GridPane.columnIndex="2" GridPane.rowIndex="3">
@@ -153,14 +151,14 @@
          <opaqueInsets>
             <Insets right="15.0" />
          </opaqueInsets>
+         <GridPane.margin>
+            <Insets right="5.0" />
+         </GridPane.margin>
       </ComboBox>
       <ComboBox fx:id="cboLocations" prefWidth="250.0" promptText="Selecteer" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.valignment="TOP">
          <GridPane.margin>
-            <Insets top="5.0" />
+            <Insets right="5.0" top="5.0" />
          </GridPane.margin>
-         <padding>
-            <Insets right="15.0" />
-         </padding>
       </ComboBox>
       <Label fx:id="lblInfo" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.rowIndex="8" GridPane.valignment="CENTER">
          <opaqueInsets>
@@ -170,5 +168,21 @@
             <Insets left="15.0" />
          </GridPane.margin>
       </Label>
+      <Button fx:id="btnNewTargetGroup" mnemonicParsing="false" onAction="#showNewTargetGroupDialog" text="Nieuw..." GridPane.rowIndex="4">
+         <GridPane.margin>
+            <Insets right="15.0" />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="btnNewFieldOfStudy" mnemonicParsing="false" onAction="#showNewFieldOfStudyDialog" text="Nieuw..." GridPane.columnIndex="2" GridPane.rowIndex="4">
+         <GridPane.margin>
+            <Insets right="15.0" />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="btnNewLocation" mnemonicParsing="false" onAction="#showNewLocationDialog" text="Nieuw..." GridPane.columnIndex="4" GridPane.rowIndex="2" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets top="5.0" />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="btnNewCompany" mnemonicParsing="false" onAction="#showNewCompanyDialog" text="Nieuw..." GridPane.columnIndex="4" GridPane.rowIndex="3" />
    </children>
 </fx:root>
