--- a/src/gui/CompanyCreationPanel.fxml
+++ b/src/gui/CompanyCreationPanel.fxml
@@ -69,7 +69,7 @@
             <Insets right="5.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addCompany" text="Toevoegen" GridPane.columnIndex="2" GridPane.rowIndex="5" GridPane.valignment="TOP">
+      <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addCompany" text="Toevoegen" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets left="5.0" />
          </GridPane.margin>
@@ -79,5 +79,10 @@
             <Insets top="50.0" />
          </GridPane.margin>
       </Label>
+      <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#cancel" text="Annuleren" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets right="100.0" />
+         </GridPane.margin>
+      </Button>
    </children>
 </fx:root>
