DOMAIN CHANGES -------------- DomainController: ----------------- ICatalog reservationCatalog changed to IReservationCatalog reservationCatalog "getReservationsFromUser()" now returns "null" if no user is set Added "currentDate" property for filtering purposes Added method "changeDateFilter()"
IReservationCatalog:
--------------------
New interface for filtering reservations on dateWanted

ReservationCatalog:
-------------------
New class to implement the IReservationCatalog interface
the method "changeFilter(Date date)" filters the reservations on date

Reservation
-----------
Added properties -int amountReturned
				 -Date returnDate
including getters, setters and persistence annotations

GUI CHANGES
-----------
MainPanelController:
-----------------------------
Reservaties now has leafs "Uitgaand" and "Binnenkomend"
changed static properties to final, why static for a constant?
strings now compare with "equals()" method instead of "=="

Reservation package
-------------------
Tons of changes, added datepicker to select next pickupDate/returnDate
Optimized update() methods in all controllers and added one in
UserTableViewController

--- a/src/gui/reservations/ReservationMainPanel.fxml
+++ b/src/gui/reservations/ReservationMainPanel.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -10,7 +12,15 @@
     <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
   </columnConstraints>
   <rowConstraints>
+      <RowConstraints maxHeight="65.0" minHeight="65.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
+   <children>
+      <DatePicker fx:id="datePicker">
+         <GridPane.margin>
+            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+         </GridPane.margin>
+      </DatePicker>
+   </children>
 </fx:root>
