--- a/src/gui/reservations/ReservationEditPanel.fxml
+++ b/src/gui/reservations/ReservationEditPanel.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -9,7 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="GridPane" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" />
     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="160.0" minWidth="160.0" prefWidth="160.0" />
@@ -49,14 +53,14 @@
       <DatePicker fx:id="datePickerReturnDate" GridPane.columnIndex="2" GridPane.rowIndex="2" />
       <TextField fx:id="txtLoanedOut" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
       <TextField fx:id="txtReturned" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-      <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#cancel" text="Annuleren" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
-         <GridPane.margin>
-            <Insets right="85.0" top="15.0" />
-         </GridPane.margin>
-      </Button>
       <Button fx:id="btnSave" mnemonicParsing="false" onAction="#edit" text="Opslaan" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets top="15.0" />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="btnDelete" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#delete" text="Verwijderen" GridPane.columnIndex="3" GridPane.rowIndex="5">
+         <GridPane.margin>
+            <Insets left="20.0" top="15.0" />
          </GridPane.margin>
       </Button>
    </children>
