--- a/src/gui/users/UserConfigurationPanel.fxml
+++ b/src/gui/users/UserConfigurationPanel.fxml
@@ -68,7 +68,7 @@
             <Insets right="10.0" />
          </GridPane.margin>
       </Label>
-      <Button fx:id="btnAdd" layoutX="316.0" layoutY="354.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#add" prefHeight="30.0" prefWidth="80.0" text="Toevoegen" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="5">
+      <Button fx:id="btnAdd" layoutX="316.0" layoutY="354.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#add" prefHeight="30.0" prefWidth="80.0" text="Toevoegen" GridPane.columnIndex="1" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets left="225.0" />
          </GridPane.margin>
